# Hotpatching_PoC

hotpatch_poc/: Cargo.toml
hotpatch_poc/src/: main.rs  pe_def.rs
hotpatch_target_sample/: hotpatch_replace_vs.c
