[package]
name = "hotpatch_poc"
version = "0.1.0"
edition = "2021"
author = "Christopher Vella (@Kharosx0)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"

# windows deps
[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Threading",
]